# GG-WD

./: #render.c#  #window.c#  .#render.c  CMakeLists.txt  gl.c  main.c  render.c  shader.c  window.c
GG_WD/: CMakeCache.txt  GG_WD  Makefile  cmake_install.cmake
WD/: CMakeCache.txt  GG_WD  Makefile  cmake_install.cmake
WD/shaders/: rect_batch.glsl  rect_batch.glsl~  spline_compute.glsl
include/: da_type.h  render.h  shader.h  window.h
include/glad/: gl.h
shaders/: #spline_compute.glsl#  .#spline_compute.glsl  circle.glsl~  points.glsl  rect_batch.glsl  spline_compute.glsl  spline_loop.glsl  spline_loop.glsl~  spline_shape.glsl  spline_shape.glsl~
